---------------------------------------------------------------------------------------------------
Version: 3.1.13
Date: ??. ??. 2019
  Bugfixes:
    - Raise event when creating ghosts
---------------------------------------------------------------------------------------------------
Version: 3.1.12
Date: 28. 07. 2019
  Bugfixes:
    - Fixed error when parsing a blueprint with missing signals
---------------------------------------------------------------------------------------------------
Version: 3.1.11
Date: 19. 06. 2019
  Changes:
    - Added tooltips to the "S" and "Read" buttons
    - removed the "Side of pole" option from the gui, added /farl_flipPoles command to toggle the setting
  Bugfixes:
    - Fixed startup error relating to sprite size
---------------------------------------------------------------------------------------------------
Version: 3.1.10
Date: 20. 05. 2019
  Bugfixes:
    - Fixed an error related to ghost rails becoming invalid
    - Fixed unknown key for modded electric poles when reading blueprints
---------------------------------------------------------------------------------------------------
Version: 3.1.9
Date: 15. 05. 2019
  Changes:
    - FARL now raises the script_raised_built and script_raised_destroy events when placing/removing entities
    - the remote calls add_entity_to_trigger, remove_entity_from_trigger and get_trigger_list no longer work
---------------------------------------------------------------------------------------------------
Version: 3.1.8
Date: 01. 05. 2019
  Changes:
    - updated for Factorio 0.17.35
---------------------------------------------------------------------------------------------------
Version: 3.1.7
Date: 29. 04. 2019
  Bugfixes:
    - fixed FARL creating wrong events when placing landfill/concrete
    - fixed FARL replacing concrete with wrong tiles
    - improved signal distance on diagonal tracks