@@ -1,10 +1,10 @@
 {
   "name": "FARL",
-  "version": "3.1.12",
+  "version": "3.1.13",
   "factorio_version": "0.17",
   "title": "Fully Automated Rail Layer",
   "author": "Choumiko",
   "homepage": "https://forums.factorio.com/viewforum.php?f=61",
   "description": "Fully automated rail-layer",
-  "dependencies": ["(?) VehiclesEquipement", "(?) TheFatController"]
+  "dependencies": ["(?) VehiclesEquipement", "(?) TheFatController", "(?) IndustrialRevolution"]
 }
