@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.13
-Date: ??. ??. 2019
+Date: 15. 09. 2019
+  Changes:
+    - Added compatibility with IndustrialRevolution
   Bugfixes:
     - Raise event when creating ghosts
 ---------------------------------------------------------------------------------------------------
